# remotebrowser

browser/: Cargo.toml
browser/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
