[package]
name = "browser"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
argon2 = "0.5"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
env_logger = "0.10"
chromiumoxide = "0.7.0"
futures = "0.3.31"
serde_json = "1.0.133"
